@@ -295,9 +295,9 @@ void FListBox::remove (std::size_t item)
   element_count = getCount();
   max_line_width = 0;
 
-  for (auto&& item : itemlist)
+  for (auto&& listbox_item : itemlist)
   {
-    std::size_t len = item.getText().getLength();
+    std::size_t len = listbox_item.getText().getLength();
 
     if ( len > max_line_width )
       max_line_width = len;
